--- a/index4.html
+++ b/index4.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>hi,,,how are you??</p>
     <p>well</p>
     <h1>good</h1>
+    <img src="baby.jpg"alt="">
 </body>
 </html>
